# marimo-tauri

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  marimo  package.nix  pyproject.toml  tauri.conf.json
capabilities/: default.json  marimo-remote.json
src/: lib.rs
